fixes on smaller screen devices

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -70,7 +70,7 @@ table.buffet {
 
 th, td {
     text-align: left;
-    padding: 8px;
+    padding: 0px;
 }
 
 td.bold {
